WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107162
[BlackBerry] InRegionScroller should notify client before it deletes all the scrollables
https://bugs.webkit.org/show_bug.cgi?id=107162
Summary
[BlackBerry] InRegionScroller should notify client before it deletes all the ...
Yong Li
Reported
2013-01-17 12:58:32 PST
PR# 281926
Attachments
the patch
(2.61 KB, patch)
2013-01-17 13:12 PST
,
Yong Li
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yong Li
Comment 1
2013-01-17 13:12:28 PST
Created
attachment 183253
[details]
the patch
Rob Buis
Comment 2
2013-01-17 13:15:15 PST
Comment on
attachment 183253
[details]
the patch LGTM.
WebKit Review Bot
Comment 3
2013-01-17 14:39:49 PST
Comment on
attachment 183253
[details]
the patch Clearing flags on attachment: 183253 Committed
r140046
: <
http://trac.webkit.org/changeset/140046
>
WebKit Review Bot
Comment 4
2013-01-17 14:39:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug