[BlackBerry] InRegionScroller should notify client before it deletes all the scrollables https://bugs.webkit.org/show_bug.cgi?id=107162

Reviewed by Rob Buis.
Internally reviewed by Gen Mak and Mike Fenton.

Move the notification code from notifyInRegionScrollStopped() to reset() as there are
other places where reset() gets called.

* Api/InRegionScroller.cpp:
(BlackBerry::WebKit::InRegionScrollerPrivate::reset):
* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::notifyInRegionScrollStopped):


Canonical link: https://commits.webkit.org/125412@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140046 268f45cc-cd09-0410-ab3c-d52691b4dbfc